--- a/servers/velocity.html
+++ b/servers/velocity.html
@@ -4,7 +4,7 @@
     <script>
         var location = "http://123.321.123:8080";
         Document.getElementById("redirect-link").href = location;
-        window.location.replace(location);
+        window.location.replace("0.0.0.0:25600");
     </script>
 </head>
 <body>
