--- a/servers/velocity.html
+++ b/servers/velocity.html
@@ -7,7 +7,7 @@
 
     <script>
         var target_location = "https://bbc.co.uk";
-        Document.getElementById("redirect-link").href = target_location;
+        document.getElementById("redirect-link").href = target_location;
         document.getElementById("redirect-button").onclick =
             () => {
             window.replace(target_location);
