--- a/servers/velocity.html
+++ b/servers/velocity.html
@@ -6,12 +6,6 @@
     <p>If you are not redirected, <a id="redirect-link" href="">click here</a>.</p>
     <button id="redirect-button">Redirect!!!!</button>
 
-    <script>
-        var target_location = "https://bbc.co.uk";
-        document.getElementById("redirect-button").onclick =
-            () => {
-            window.replace(target_location);
-        };
-    </script>
+    <script src="velocity.js"></script>
 </body>
 </html>
