--- a/servers/velocity/index.html
+++ b/servers/velocity/index.html
@@ -4,8 +4,7 @@
 </head>
 <body>
     <p>If you are not redirected, <a id="redirect-link" href="">click here</a>.</p>
-    <button id="redirect-button">Redirect!!!!</button>
 
-    <script src="velocity.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
