--- a/servers/velocity/index.html
+++ b/servers/velocity/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-    <p>If you are not redirected, <a id="redirect-link" href="">click here</a>.</p>
-
+    <!-- <p>If you are not redirected, <a id="redirect-link" href="">click here</a>.</p> -->
+    <button id="test-button">test</button>
     <script src="script.js"></script>
 </body>
 </html>
