--- a/risk/index.html
+++ b/risk/index.html
@@ -19,7 +19,7 @@
     <p id="attack_count">attack_count</p>
     <p id="defend_count">defend_count</p>
 
-    <h2>Winner: </h2>
+    <h2 id="winner">Winner: </h2>
     <div id="results"></div>
 
     <script src="script.js"></script>
