Tested mobile fix

--- a/risk/index.html
+++ b/risk/index.html
@@ -4,10 +4,10 @@
     <script src="https://kit.fontawesome.com/b6a2129284.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Risk Odds Calculator</title>
 </head>
 <body>
-    <img src="images/risk_logo.png" />
+    <img src="images/risk_logo.png" id="title" />
     <h1>Odds Calculator</h1>
     <label for="start_attack_count">Attack Count:</label>
     <input type="number" id="start_attack_count" name="start_attack_count">
