--- a/risk/index.html
+++ b/risk/index.html
@@ -7,6 +7,13 @@
     <title>Risk Odds Calculator</title>
 </head>
 <body>
+    <div id="rect1"></div>
+    <div id="rect2"></div>
+    <div id="rect3"></div>
+    <div id="rect4"></div>
+    <div id="rect5"></div>
+    <div id="rect6"></div>
+
     <img src="images/risk_logo.png" id="title" />
     <h1>Odds Calculator</h1>
     <label for="start_attack_count">Attack Count:</label>
