--- a/risk/index.html
+++ b/risk/index.html
@@ -16,10 +16,11 @@
 
 
     <br><button onclick="get_winner_with_values()">Calculate!</button>
-    <p id="attack_count">attack_count</p>
-    <p id="defend_count">defend_count</p>
-
+    
     <h2 id="winner">Winner: </h2>
+    <p id="attack_count">Attack has 'attack_count' left</p>
+    <p id="defend_count">Defend has 'defend_count' left</p>
+    
     <div id="results"></div>
 
     <script src="script.js"></script>
