--- a/risk/index.html
+++ b/risk/index.html
@@ -17,7 +17,7 @@
 
     <br><button onclick="get_winner_with_values()">Calculate!</button>
     
-    <h2 id="winner">Winner: </h2>
+    <h2 id="winner">Winner</h2>
     <p id="attack_count">Attack has 'attack_count' left</p>
     <p id="defend_count">Defend has 'defend_count' left</p>
     
