--- a/risk/index.html
+++ b/risk/index.html
@@ -10,9 +10,9 @@
     <div id="main">
         <img src="images/risk_logo.png" id="title" />
         <h1>Odds Calculator</h1>
-        <label for="start_attack_count">Attack Count:</label>
+        <label for="start_attack_count">Attacker's country's troop count:</label>
         <input type="number" id="start_attack_count" name="start_attack_count">
-        <label for="start_defend_count">Defend Count:</label>
+        <label for="start_defend_count">Defender's country's troop count:</label>
         <input type="number" id="start_defend_count" name="start_defend_count">
     
     
