--- a/risk/index.html
+++ b/risk/index.html
@@ -26,9 +26,9 @@
     </div>
 
 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-dark.css" id="theme">
     <script src="script.js"></script>
     <script src="theme-selector.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-light.css" id="theme">
 </body>
 </html>
