--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <h1>Nathan3-14's Github Page</h1>
     <div id="pages">
-        <button class="link" id="menu">Menu</p></button>
-        <button class="link" id="bcp-shop"><p>BCP Shop</p></button>
-        <button class="link" id="magic"><p>Mathemagic</p></button>
+        <button class="link" id="menu">Menu</button><br>
+        <button class="link" id="info-square">Info Square</button><br>
+        <button class="link" id="magic">Mathemagic</button><br>
+        <button class="link" id="risk">Risk Calculator</button><br>
     </div>
     <script src="script.js"></script>
 </body>
