Made new gradients easier to add

--- a/gradients/659999-f4791f/index.html
+++ b/gradients/659999-f4791f/index.html
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
+            background: linear-gradient(270deg, #659999, #f4791f
 );
             background-size: 600% 600%;
 
