--- a/gradients/ad5389-3c1053/index.html
+++ b/gradients/ad5389-3c1053/index.html
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
+            background: linear-gradient(270deg, #ad5389, #3c1053
 );
             background-size: 600% 600%;
 
