--- a/gradients/index.html
+++ b/gradients/index.html
@@ -6,7 +6,15 @@
     <title>Gradients</title>
 </head>
 <body>
-    <div id="a24bcf-4b79cf-4bc5cf" class="gradient-button"></div>
+	<div id=00bf8f-001510 class="gradient-button"></div>
+	<div id=ffd89b-19547b class="gradient-button"></div>
+	<div id=a1ffce-faffd1 class="gradient-button"></div>
+	<div id=283c86-45a247 class="gradient-button"></div>
+	<div id=03001e-7303c0-ec38bc-fdeff9 class="gradient-button"></div>
+	<div id=fffbd5-b20a2c class="gradient-button"></div>
+	<div id=659999-f4791f class="gradient-button"></div>
+	<div id=ad5389-3c1053 class="gradient-button"></div>
+	<div id=a24bcf-4b79cf-4bc5cf class="gradient-button"></div>
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
