--- a/gradients/00bf8f-001510/index.html
+++ b/gradients/00bf8f-001510/index.html
@@ -8,8 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
-);
+            background: linear-gradient(270deg, #00bf8f, #001510);
             background-size: 600% 600%;
 
             -webkit-animation: AnimationName 59s ease infinite;
