--- a/gradients/03001e-7303c0-ec38bc-fdeff9/index.html
+++ b/gradients/03001e-7303c0-ec38bc-fdeff9/index.html
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
+            background: linear-gradient(270deg, #03001e, #7303c0, #ec38bc, #fdeff9
 );
             background-size: 600% 600%;
 
