--- a/gradients/283c86-45a247/index.html
+++ b/gradients/283c86-45a247/index.html
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
+            background: linear-gradient(270deg, #283c86, #45a247
 );
             background-size: 600% 600%;
 
