--- a/gradients/ffd89b-19547b/index.html
+++ b/gradients/ffd89b-19547b/index.html
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
+            background: linear-gradient(270deg, #ffd89b, #19547b
 );
             background-size: 600% 600%;
 
