--- a/gradients/fffbd5-b20a2c/index.html
+++ b/gradients/fffbd5-b20a2c/index.html
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(270deg, #a24bcf, #4b79cf, #4bc5cf
+            background: linear-gradient(270deg, #fffbd5, #b20a2c
 );
             background-size: 600% 600%;
 
