--- a/servers/index.html
+++ b/servers/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Servers</title>
 </head>
 <body>
-    <p>asfjasbfj</p>
+    <ul>
+        <li><a href="nginx">Nginx Server</a></li>
+        <li><a href="flask">Flask Server</a></li>
+    </ul>
 </body>
 </html>
