--- a/servers/flask/index.html
+++ b/servers/flask/index.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Redirect Did not work, please reload the page</h1>
     <script>
-        window.location = "86.141.169.2:8080"
+        window.location.replace("86.141.169.2:8080")
     </script>
 </body>
 </html>
