--- a/servers/nginx/index.html
+++ b/servers/nginx/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-    <h1>Redirect Did not work, please reload the page</h1>
+    <h1>Redirect did not work, please make sure javascript is enabled and try again.</h1>
     <script>
         window.location.href = "http://86.141.169.2:8000"
     </script>
