--- a/stripe/index.html
+++ b/stripe/index.html
@@ -6,5 +6,7 @@
     <body>
         <h1>Only created to complete my stripe account</h1>
         <marquee><h2>Weeeee scrolling text</h2></marquee>
+        <p>My Name is Nathan Watson, this site is not password protected</p>
     </body>
+
 </html>
