Changed how scripts are organised

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -7,36 +7,43 @@
 </head>
 <body>
     <h1>Scripts</h1>
+    <a target="_blank" href="https://www.botcscripts.com/">Botc Scripts Website</a>
+    
+    <!--? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.pdf?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ?-->
+    
+    <h2>Printed Scripts</h2>
     <ul>
-        <!--? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.pdf?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ?-->
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.pdf?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/bad_moon_rising/bad_moon_rising.pdf?raw=true">Bad Moon Rising <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sects_and_violets/sects_and_violets.pdf?raw=true">Sects and Violets <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confusion/confusion.pdf?raw=true">Confusion <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/everyone_can_play/everyone_can_play.pdf?raw=true">Everyone can Play <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/insomnia/insomnia.pdf?raw=true">Insomnia <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/please_shut_the_fuck_up/please_shut_the_fuck_up.pdf?raw=true">Please Shut the Fuck Up <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/kaboom/kaboom.pdf?raw=true">Kaboom <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_minotaurs_labyrinth/the_minotaurs_labyrinth.pdf?raw=true">The Minotaur's Labyrinth <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/no_roles_barred/no_roles_barred.pdf?raw=true">No Roles Barred <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/idiot_sauce/idiot_sauce.pdf?raw=true">Idiot Sauce <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confused_nomination/confused_nomination.pdf?raw=true">Confused Nomination <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+    </ul>
+    <h2>Other Scripts</h2>
+    <ul>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/circle_of_trust/circle_of_trust.pdf?raw=true">Circle of Trust <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/clocktower_the_on_blood/clocktower_the_on_blood.pdf?raw=true">Clocktower the on Blood <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confused_nomination/confused_nomination.pdf?raw=true">Confused Nomination <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confusion/confusion.pdf?raw=true">Confusion <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/do_we_have_any_outsiders_/do_we_have_any_outsiders_.pdf?raw=true">Do we have any Outsiders? <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/dreams_and_deceptions/dreams_and_deceptions.pdf?raw=true">Dreams and Deceptions <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/everyone_can_play/everyone_can_play.pdf?raw=true">Everyone can Play <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/extension_cord/extension_cord.pdf?raw=true">Extension Cord <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/good_moon_rising/good_moon_rising.pdf?raw=true">Good Moon Rising <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/idiot_sauce/idiot_sauce.pdf?raw=true">Idiot Sauce <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/immortal_dance_party/immortal_dance_party.pdf?raw=true">Immortal Dance Party <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/insomnia/insomnia.pdf?raw=true">Insomnia <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/kaboom/kaboom.pdf?raw=true">Kaboom <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/lunar_eclipse_v1/lunar_eclipse_v1.6.pdf?raw=true">Lunar Eclipse V1.6</a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/no_roles_barred/no_roles_barred.pdf?raw=true">No Roles Barred <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/outed_evil/outed_evil.pdf?raw=true">Outed Evil <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/please_shut_the_fuck_up/please_shut_the_fuck_up.pdf?raw=true">Please Shut the Fuck Up <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/royal_institue_of_tyranny/royal_institue_of_tyranny.pdf?raw=true">Royal Institute of Tyranny <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sainsbury's_taste_the_difference_riot/sainsbury's_taste_the_difference_riot.pdf?raw=true">Sainsbury's Taste the Difference Riot <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sects_and_violets/sects_and_violets.pdf?raw=true">Sects and Violets <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.pdf?raw=true">Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/teensy_brewing/teensy_brewing.pdf?raw=true">Teensy Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_baron_is_here/the_baron_is_here.pdf?raw=true">The Baron is Here <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_midnight_oasis/the_midnight_oasis.pdf?raw=true">The Midnight Oasis <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_minotaurs_labyrinth/the_minotaurs_labyrinth.pdf?raw=true">The Minotaur's Labyrinth <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/tim_curry's_non-fiction_transylvanian_experience/tim_curry's_non-fiction_transylvanian_experience.pdf?raw=true">Tim Curry's non-fiction Transylvanian Experience <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.pdf?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_doubling_over/trouble_doubling_over.pdf?raw=true">Trouble Doubling Over <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/turbulence_boiling/turbulence_boiling.pdf?raw=true">Turbulence Boiling <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/undead_nightmares/undead_nightmares.pdf?raw=true">Undead Nightmares <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
