Added pies baking Added icon to scripts site

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <h1>Scripts</h1>
-    <a target="_blank" href="https://www.botcscripts.com/">Botc Scripts Website</a>
+    <a target="_blank" href="https://www.botcscripts.com/">Botc Scripts Website <i class="fa-solid fa-up-right-from-square"></i></a>
     
-    <!--? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.png?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ?-->
+    <!-- ? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.png?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ? -->
     
     <h2>Printed Scripts</h2>
     <ul>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.png?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/bad_moon_rising/bad_moon_rising.png?raw=true">Bad Moon Rising <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sects_and_violets/sects_and_violets.png?raw=true">Sects and Violets <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/pies_baking/pies_baking.png=true">Pies Baking <i class="fa-solid fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confusion/confusion.png?raw=true">Confusion <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/everyone_can_play/everyone_can_play.png?raw=true">Everyone can Play <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/insomnia/insomnia.png?raw=true">Insomnia <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
