Added new script

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -49,6 +49,7 @@
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/turbulence_boiling/turbulence_boiling.png?raw=true">Turbulence Boiling <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/undead_nightmares/undead_nightmares.png?raw=true">Undead Nightmares <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/unholier_than_thou/unholier_than_thou.png?raw=true">Unholier than Thou <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/who_am_i_/who_am_i_.png?raw=true">Who am I? <i class="fa-solid fa-up-right-from-square"></i></a></li>
     </ul>
 </body>
 </html>
