Added Irrational Behaviour

--- a/botc/index.html
+++ b/botc/index.html
@@ -27,6 +27,7 @@
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/idiot_sauce/idiot_sauce.png?raw=true">Idiot Sauce <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confused_nomination/confused_nomination.png?raw=true">Confused Nomination <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.png?raw=true">Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/irrational_behaviour/irrational_behaviour.png?raw=true">Irrational Behaviour <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
     </ul>
     <h2>Other Scripts</h2>
     <ul>
