--- a/botc/index.html
+++ b/botc/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Scripts</h1>
-    <a target="_blank" href="https://www.botcscripts.com/">Botc Scripts Website <i class="fa-solid fa-up-right-from-square"></i></a>
+    <a target="_blank" href="https://www.botcscripts.com/">BotC Scripts Website <i class="fa-solid fa-up-right-from-square"></i></a>
+    <a href="https://nathan3-14.github.io/botc/wins">BotC Win Tracker</a>
     
     <!-- ? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.png?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ? -->
     
