--- a/botc/storytelling/index.html
+++ b/botc/storytelling/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <h2>Grimoire Setup</h2>
-    <img src="./images/grim.jpg" width="500">
+    <img src="./images/temp_grim.jpg" width="500">
 
     <h3>Specific Setup</h3>
     <p>
