Improved storytelling guide

--- a/botc/storytelling/index.html
+++ b/botc/storytelling/index.html
@@ -11,35 +11,65 @@
     <div>
         <h3>Links</h3>
         <ul>
-            <li><a href="https://www.youtube.com/watch?v=OIUVppt8pSk"><i class="fa-solid fa-video"></i> How to Storytell: Setup</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ODIjuk4ZszI"><i class="fa-solid fa-video"></i> How to Storytell: Night</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Fbvi1i7NC4o"><i class="fa-solid fa-video"></i> How to Storytell: Day</a></li>
-            <li><a href="https://www.youtube.com/watch?v=4sfa8_kNxsQ"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 1</a></li>
-            <li><a href="https://www.youtube.com/watch?v=2TlW06GVF8I"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 2</a></li>
-            <li><a href="https://www.youtube.com/watch?v=pVzZms1FTr4"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 3</a></li>
-            <li><a href="https://www.youtube.com/@BloodontheClocktower"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Blood on the Clocktower YouTube Channel</a></li>
-            <li><a href="https://wiki.bloodontheclocktower.com/Main_Page"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Wiki</a></li>
-            <li><a href="https://wiki.bloodontheclocktower.com/Storyteller_Advice"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Wiki Storyteller Advice</a></li>
+            <li><a href="https://www.youtube.com/watch?v=OIUVppt8pSk" target="_blank"><i class="fa-solid fa-video"></i> How to Storytell: Setup</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ODIjuk4ZszI" target="_blank"><i class="fa-solid fa-video"></i> How to Storytell: Night</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Fbvi1i7NC4o" target="_blank"><i class="fa-solid fa-video"></i> How to Storytell: Day</a></li>
+            <li><a href="https://www.youtube.com/watch?v=4sfa8_kNxsQ" target="_blank"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 1</a></li>
+            <li><a href="https://www.youtube.com/watch?v=2TlW06GVF8I" target="_blank"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 2</a></li>
+            <li><a href="https://www.youtube.com/watch?v=pVzZms1FTr4" target="_blank"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 3</a></li>
+            <li><a href="https://www.youtube.com/@BloodontheClocktower" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Blood on the Clocktower YouTube Channel</a></li>
+            <li><a href="https://wiki.bloodontheclocktower.com/Main_Page" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Wiki</a> (specifically <a href="https://wiki.bloodontheclocktower.com/Abilities" target="_blank">Abilities</a>, <a href="https://wiki.bloodontheclocktower.com/States" target="_blank">States</a> and the <a href="https://wiki.bloodontheclocktower.com/Rules_Explanation" target="_blank">Rules Explanation</a> if you need more info on those)</li>
+            <li><a href="https://wiki.bloodontheclocktower.com/Storyteller_Advice" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Wiki Storyteller Advice</a></li>
+            <li><a href="https://quiz.bloodontheclocktower.com/" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Storytelling Quiz!</a></li>
         </ul>
     </div>
 
+    <h3>Terminology</h3>
+    <ul>
+        <li>
+            <b>Character Token</b> - What role a player is
+            <br>For Example <ul>
+                <li>Washerwoman</li>
+                <li>Slayer</li>
+                <li>Imp</li>
+            </ul>
+        </li>
+        <li>
+            <b>Demon Bluff</b> - A character that is not in play that the Demon can use to bluff
+            <br>The ones in the below Grimoire are <ul>
+                <li>Fortunte Teller</li>
+                <li>Monk</li>
+                <li>Washerwoman</li>
+            </ul>
+        </li>
+        <li>
+            <b>Reminder Token</b> - Little tokens used to remind you of certain things
+            <br>For Example <ul>
+                <li>Imp's "Dead" token for who dies</li>
+                <li>Investigator's "Decoy" and "Minion" token for who to show them</li>
+                <li>Poisoner's "Poisoned" token for who is poisoned (ability doesn't work)</li>
+            </ul>
+            Rememder, <b>Demon Bluffs</b> are not in play so don't need reminders!
+        </li>
+    </ul>
+
     <h2>Grimoire Setup</h2>
-    <img src="./images/temp_grim.jpg" width="500">
+    <img src="./images/grim_annotated.jpeg" width="500">
 
     <h3>Specific Setup</h3>
     <p>
-        On the felted (left) side (Section A), each player's character token will be located. Ensure they are arranged in a way that means you can clearly identify which one belongs to whom.
-        <br>Beneath those (or anywhere you like really), you can keep the demon bluffs.
-        <br>On the other side (Section B), there is additional felted space to keep spare tokens, reminders etc.
-        <br><br>Section C is where I recommend keeping the night Cards. The Cards allow you to indicate information such as "You are", "These are your Minions", "These Characters are not in Play" (used for demon bluffs) etc. to the players.
-        <br>The death shrouds are used in mine and are located in the same place (but make a lot of noise so may not be good to use at night).
+        On the felted (left) side (<span style="color: blue">Section A</span>), each player's <b>character token</b> will be located. Ensure they are arranged in a way that means you can clearly identify which one belongs to whom.
+        <br>Beneath those (or anywhere you like really), you can keep the <b>demon bluffs</b>.
+        <br>On the other side (<span style="color: red">Section B</span>), there is additional felted space to keep spare tokens, <b>reminder tokens</b> etc.
+        <br><br><span style="color: lightgreen">Section C</span> is where I recommend keeping the night Cards. The Cards allow you to indicate information such as "You are", "These are your Minions", "These Characters are not in Play" (used for <b>demon bluffs</b>) etc. to the players.
+        <br>The death shrouds are located in the same place (but can make a lot of noise so may not be good to use at night).
     </p>
 
     <h3>Extras</h3>
     <p>
         Some things mentioned in the above videos are not directly replicated in my version of Blood on the Clocktower.
-        <br><br>Moreover we do not have a "Townsquare". This is used to publicly indicate who is alive, dead or has their dead vote remaining. Instead of this, I use the small grey tokens in Section D and place them by players who have used their dead votes.
-        <br><br>I also highly recommend watching the videos I linked above to get to know the general concept of storytelling better before our next session.
+        <br><br>Moreover, we do not have a "Townsquare". This is used to publicly indicate who is alive, dead or has their dead vote remaining. Instead of this, I use the small grey tokens in <span style="color: purple">Section D</span> and place them by players who have used their dead votes.
+        <br><br>I also highly recommend watching the videos and completing some of the <a href="https://quiz.bloodontheclocktower.com/trouble-brewing-easy/question-1" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Beginner Quiz Questions</a> I linked above to get to know the general concept of storytelling better before our next session.
     </p>
 
 
