--- a/botc/storytelling/index.html
+++ b/botc/storytelling/index.html
@@ -11,16 +11,16 @@
     <div>
         <h3>Links</h3>
         <ul>
-            <li><a href="https://www.youtube.com/watch?v=OIUVppt8pSk" target="_blank"><i class="fa-solid fa-video"></i> How to Storytell: Setup</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ODIjuk4ZszI" target="_blank"><i class="fa-solid fa-video"></i> How to Storytell: Night</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Fbvi1i7NC4o" target="_blank"><i class="fa-solid fa-video"></i> How to Storytell: Day</a></li>
-            <li><a href="https://www.youtube.com/watch?v=4sfa8_kNxsQ" target="_blank"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 1</a></li>
-            <li><a href="https://www.youtube.com/watch?v=2TlW06GVF8I" target="_blank"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 2</a></li>
-            <li><a href="https://www.youtube.com/watch?v=pVzZms1FTr4" target="_blank"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 3</a></li>
-            <li><a href="https://www.youtube.com/@BloodontheClocktower" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Blood on the Clocktower YouTube Channel</a></li>
-            <li><a href="https://wiki.bloodontheclocktower.com/Main_Page" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Wiki</a> (specifically <a href="https://wiki.bloodontheclocktower.com/Abilities" target="_blank">Abilities</a>, <a href="https://wiki.bloodontheclocktower.com/States" target="_blank">States</a> and the <a href="https://wiki.bloodontheclocktower.com/Rules_Explanation" target="_blank">Rules Explanation</a> if you need more info on those)</li>
-            <li><a href="https://wiki.bloodontheclocktower.com/Storyteller_Advice" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Wiki Storyteller Advice</a></li>
-            <li><a href="https://quiz.bloodontheclocktower.com/" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Storytelling Quiz!</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=OIUVppt8pSk"><i class="fa-solid fa-video"></i> How to Storytell: Setup</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=ODIjuk4ZszI"><i class="fa-solid fa-video"></i> How to Storytell: Night</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=Fbvi1i7NC4o"><i class="fa-solid fa-video"></i> How to Storytell: Day</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=4sfa8_kNxsQ"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 1</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=2TlW06GVF8I"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 2</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/watch?v=pVzZms1FTr4"><i class="fa-solid fa-video"></i> In-Person Trouble Brewing Game 3</a></li>
+            <li><a target="_blank" href="https://www.youtube.com/@BloodontheClocktower"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Blood on the Clocktower YouTube Channel</a></li>
+            <li><a target="_blank" href="https://wiki.bloodontheclocktower.com/Main_Page" ><i class="fa-solid fa-xs fa-up-right-from-square"></i> Official Wiki</a> (specifically <a href="https://wiki.bloodontheclocktower.com/Abilities" target="_blank">Abilities</a>, <a href="https://wiki.bloodontheclocktower.com/States" target="_blank">States</a> and the <a href="https://wiki.bloodontheclocktower.com/Rules_Explanation" target="_blank">Rules Explanation</a> if you need more info on those)</li>
+            <li><a target="_blank" href="https://wiki.bloodontheclocktower.com/Storyteller_Advice"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Wiki Storyteller Advice</a></li>
+            <li><a target="_blank" href="https://quiz.bloodontheclocktower.com/"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Storytelling Quiz!</a></li>
         </ul>
     </div>
 
@@ -69,7 +69,7 @@
     <p>
         Some things mentioned in the above videos are not directly replicated in my version of Blood on the Clocktower.
         <br><br>Moreover, we do not have a "Townsquare". This is used to publicly indicate who is alive, dead or has their dead vote remaining. Instead of this, I use the small grey tokens in <span style="color: purple">Section D</span> and place them by players who have used their dead votes.
-        <br><br>I also highly recommend watching the videos and completing some of the <a href="https://quiz.bloodontheclocktower.com/trouble-brewing-easy/question-1" target="_blank"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Beginner Quiz Questions</a> I linked above to get to know the general concept of storytelling better before our next session.
+        <br><br>I also highly recommend watching the videos and completing some of the <a target="_blank" href="https://quiz.bloodontheclocktower.com/trouble-brewing-easy/question-1"><i class="fa-solid fa-xs fa-up-right-from-square"></i> Beginner Quiz Questions</a> I linked above to get to know the general concept of storytelling better before our next session.
     </p>
 
 
