Added night order information

--- a/botc/storytelling/index.html
+++ b/botc/storytelling/index.html
@@ -50,6 +50,8 @@
                 <li>Poisoner's "Poisoned" token for who is poisoned (ability doesn't work)</li>
             </ul>
             Rememder, <b>Demon Bluffs</b> are not in play so don't need reminders!
+            <br>And some of these reminders (like the Washerwoman's and Fortune Teller's) need to be placed before the game starts
+            <br>I recommend getting all reminder tokens out before the game starts. The number of leaves at the top of a <b>character token</b> denote how many are needed for that character.
         </li>
     </ul>
 
@@ -64,6 +66,11 @@
         <br><br><span style="color: lightgreen">Section C</span> is where I recommend keeping the night Cards. The Cards allow you to indicate information such as "You are", "These are your Minions", "These Characters are not in Play" (used for <b>demon bluffs</b>) etc. to the players.
         <br>The death shrouds are located in the same place (but can make a lot of noise so may not be good to use at night).
     </p>
+
+    <h3>Night Order Sheet</h3>
+    The night shows what order you should wake people in, as well as what you'll be doing.
+    <br>The small black circles denote when you need to place a <b>reminder token</b> because of a player action.
+    <br><img src="./images/trouble_brewing_first_night.png" width="400"><img src="./images/trouble_brewing_other_nights.png" width="400">
 
     <h3>Extras</h3>
     <p>
