--- a/botc/storytelling/index.html
+++ b/botc/storytelling/index.html
@@ -64,7 +64,7 @@
         <br>Beneath those (or anywhere you like really), you can keep the <b>demon bluffs</b>.
         <br>On the other side (<span style="color: red">Section B</span>), there is additional felted space to keep spare tokens, <b>reminder tokens</b> etc.
         <br><br><span style="color: lightgreen">Section C</span> is where I recommend keeping the night Cards. The Cards allow you to indicate information such as "You are", "These are your Minions", "These Characters are not in Play" (used for <b>demon bluffs</b>) etc. to the players.
-        <br>The death shrouds are located in the same place (but can make a lot of noise so may not be good to use at night).
+        <br>The death shrouds are located below in <span style="color: purple">Section D</span>  (but can make a lot of noise so may not be good to use at night) as well as the vote tokens and extra info cards.
     </p>
 
     <h3>Night Order Sheet</h3>
